--- a/12_Shop_MultiProduct-2/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 <body>
    
 
-    @Html.Partial("_partial/_HeaderPartial")
+    @Html.Partial("_partial/_HeaderPartial", null)
 
     <div class="main-page">
         @RenderBody()
