--- a/12_Shop_MultiProduct-2/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 
-                <div class="col-md-4 col-sm-12 col-xs-12 header-search">
+                <div class="col-md-5 col-sm-12 col-xs-12 header-search">
                         <div class="form-search">
                             <form action="@baseUrl/search" method="get" role="search">
                                 <input type="text" name="keyword" placeholder="Tìm kiếm" aria-label="Search" itemprop="query-input">
@@ -46,46 +46,23 @@
                             <li>gõ Tiếng Việt có dấu hoặc không dấu đều được</li>
                         </ul>
                     </div>
-                <div class="col-md-3 hidden-sm hidden-xs header-user">
-
-                    <div class="box-cart pull-right relative">
-                        <a href="/product/checkout">
-                            <div class="box">
-                                <div class="box">
-                                    <div class="icon">
-                                        <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                    </div>
-                                    <div class="text">
-                                        <span>Giỏ hàng (<span id="cartCount" class="numberCart spN">0</span>)</span>
-                                        <span id="cartPrice" class="sub">0₫</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="pull-right hidden-xs">
-                        <a href="/product/checkout">
-                            <div class="box">
-                                <div class="box">
-                                    <div class="icon">
-                                        <i class="fa fa-youtube" aria-hidden="true"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-
-                    </div>
-                    <div class="pull-right hidden-xs">
-                        <a href="@commonInfo.FaceBookLink">
-                            <div class="box">
-                                <div class="box">
-                                    <div class="icon">
-                                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+                <div class="col-md-2 hidden-sm hidden-xs header-languages">
+                    <a  href="#" class="current-languages">
+                        Ngôn ngữ
+                        <i class="fa fa-chevron-down"></i>
+                    </a>
+                   <ul class="list-languages">
+                       <li class="list-items">
+                           <a href="#">Tiếng Việt
+                            <span class="flags flag-vn"></span>                           
+                           </a>
+                       </li>
+                       <li class="list-items">
+                           <a href="#">Tiếng Anh
+                            <span class="flags flag-eng"></span>
+                           </a>
+                       </li>
+                   </ul>
                 </div>
                 
                 
@@ -123,12 +100,51 @@
                 <li class="li-child">
                     <a href="#" class="" title="Ưu đãi">
                         Ưu đãi
+                        <i class="fa fa-chevron-down"></i>
                     </a>
+                    <ul class="nav-navbar-child">
+                        <li class="nav-child-items">
+                            <a href="#">Văn phòng truyền thống</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Văn phòng mini</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Văn phòng ảo</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Cho thuê chỗ ngồi làm việc</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Cho thuê phòng họp</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Chính sách ưu đãi</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="li-child">
                     <a href="#" class="" title="Giới thiệu">
                         Giới thiệu
+                        <i class="fa fa-chevron-down"></i>
                     </a>
+                    <ul class="nav-navbar-child">
+                        <li class="nav-child-items">
+                            <a href="#">Giới thiệu chung</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Tầm nhìn - Sứ mệnh</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Sơ đồ tổ chức</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Văn hóa doanh nghiệp</a>
+                        </li>
+                        <li class="nav-child-items">
+                            <a href="#">Năng lực công ty</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="li-child">
                     <a href="#" class="" title="Tin tức">
