update home theme

--- a/12_Shop_MultiProduct-2/Content/theme/css/_header.scss
+++ b/12_Shop_MultiProduct-2/Content/theme/css/_header.scss
@@ -86,6 +86,10 @@ header {
                 -moz-border-radius-bottomleft: 0;
                 border: 1px solid #fff;
                 border-left: 0;
+
+                &:hover{
+                    cursor: pointer;
+                }
             }
         }
 
