--- a/12_Shop_MultiProduct-2/Content/theme/css/_responsive.scss
+++ b/12_Shop_MultiProduct-2/Content/theme/css/_responsive.scss
@@ -8,7 +8,7 @@
 
 @media screen and (min-width: 1200px){
   .container {
-    width: 1200px; padding: 0; max-width: 1200px;
+    width: 1200px;  max-width: 1200px;
   }
 }
 
