--- a/12_Shop_MultiProduct-2/Content/theme/css/style.scss
+++ b/12_Shop_MultiProduct-2/Content/theme/css/style.scss
@@ -232,7 +232,7 @@
 .box-slide-home {
   margin: 15px 0 0;
   .main-slide-home {
-    margin-left: -10px; margin-right: -10px; overflow: hidden; clear: both;
+    overflow: hidden; clear: both; width: 100%;
     .banner-slider, .banner-right {
       padding-left: 10px; padding-right: 10px;
     }
@@ -418,7 +418,7 @@
 }
 
 .box-title-new {
-  text-align: center; overflow: hidden; position: relative; margin-bottom: 15px; font-weight: normal;
+   overflow: hidden; position: relative; margin-bottom: 15px; font-weight: normal;
   .title-top {
     position: relative;
     &:before {
@@ -1029,4 +1029,203 @@
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
     }
+}
+
+.box-title-new {
+
+    .title {
+        font-weight: bold;
+        font-size: 28px;
+        font-style: italic;
+        position: relative;
+        padding: 0 0 8px 8px;
+
+        &:before {
+            content: "";
+            display: inline-block;
+            height: 4px;            
+            background-color: $color-main;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+
+        &.line-width-10{
+            &:before{
+                width: 10%;
+            }
+        }
+
+        &.line-width-14{
+            &:before{
+                width: 14%;
+            }
+        }
+        &.line-width-28{
+            &:before{
+                width: 28%;
+            }
+        }
+
+        &.line-width-26{
+            &:before{
+                width: 26%;
+            }
+        }
+    }
+
+    &.has-sub-content {
+        padding-bottom: 85px;
+    }
+
+    & > span {
+        display: inline-block;
+        width: 52%;
+        position: absolute;
+        left: 50%; font-size: 18px;
+        transform: translateX(-50%);
+        font-style: italic;
+        color: $color-main;
+    }
+}
+
+.box-services {
+    .items-service {
+        display: block;
+        text-align: center;
+
+        & > h2 {
+            font-size: 20px;
+            color: #333;
+            margin: 15px 0 0 0;
+        }
+
+        & > span:not(.read-more) {
+            color: #333;
+            display: inline-block;
+            height: 60px;
+            white-space: pre-wrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin: 10px 0 0 0;
+        }
+
+        .read-more {
+            color: #333;
+            display: inline-block;
+            margin: 5px 0 0 0;
+            font-size: 16px;
+            font-weight: bold;
+            position: relative;
+            padding-bottom: 6px;
+
+            &:before {
+                content: '';
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                width: 0;
+                height: 4px;
+                background-color: $color-main;
+                -webkit-transition: all 0.3s ease;
+                -moz-transition: all 0.3s ease;
+                -ms-transition: all 0.3s ease;
+                -o-transition: all 0.3s ease;
+            }
+        }
+
+        &:hover {
+            & > h2, & > span {
+                color: $color-main;
+            }
+
+            .read-more:before {
+                width: 100%;
+            }
+        }
+    }
+}
+
+.section-posts{
+    .items-post{
+        display: block; margin: 0 0 20px 0;
+        & >img{
+            width: 140px; height: 95px;
+            float: left;
+        }
+
+        &:before, &:after{
+            content: ''; clear: both;
+        }
+    }
+
+    .content-post{
+        margin-left: 150px;
+        color: #333;
+        &>h3{
+            color: $color-main;
+        }
+    }
+}
+
+@mixin multiLineEllipsis($lineHeight: 1.2em, $lineCount: 1, $bgColor: white) {
+    overflow: hidden;
+    position: relative;
+    line-height: $lineHeight;
+    max-height: $lineHeight * $lineCount;
+    text-align: justify;
+    margin-right: -1em;
+    padding-right: 1em;
+    white-space: initial;
+
+    &:before {
+        content: '...';
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        right: 0;
+        width: 1em;
+        height: 1em;
+        margin-top: 0.2em;
+    }
+}
+
+.block-with-text {
+    display: inline-block;
+    @include multiLineEllipsis($lineHeight: 1.2em, $lineCount: 3, $bgColor: white);
+}
+
+
+.swiper-container {
+    width: 100%;
+    height: 130px;
+}
+
+.swiper-wrapper{
+    & > .swiper-slider{
+        width: 107px!important; 
+    }
+}
+
+.swiper-button-prev {
+    left: -5px!important;
+    &:after {
+        content: '' !important;
+    }
+}
+
+.swiper-button-next {
+    right: 5px!important;
+    &:after {
+        content: '' !important;
+    }
+}
+
+.box-swiper-slider{
+    margin: 30px 0 0 0;
 }
