--- a/12_Shop_MultiProduct-2/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     <!-- Apple iOS and Android stuff -->
     <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='/static/css' rel='stylesheet' type='text/css'>
@@ -34,7 +35,7 @@
 
 </head>
 <body>
-   
+
 
     @Html.Partial("_partial/_HeaderPartial", null)
 
@@ -102,6 +103,28 @@
         "logo": "@commonInfo.Logo"
         }
 
+    </script>
+    <script src="~/Content/theme/js/swiper-bundle.min.js"></script>
+    <script>
+
+        var swiper = new Swiper('.swiper-container', {
+      slidesPerView: 7,
+      spaceBetween: 30,
+      slidesPerGroup: 3,
+      loop: true,
+      autoplay: true,
+      speed: 400,
+	  autoplay:4000,
+      loopFillGroupWithBlank: false,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
     </script>
 </body>
 </html>
