--- a/12_Shop_MultiProduct-2/Views/Shared/_partial/_FooterPartial.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Shared/_partial/_FooterPartial.cshtml
@@ -138,17 +138,21 @@
             <div class="main-bottom-footer clearfix">
                 <div class="logo pull-left">
                     <a href="#" title="">
-                        <img class="insImageload" data-load="true" src="@commonInfo.Logo" alt="@commonInfo.Name">
+                        <img class="insImageload" data-load="true" src="~/Content/theme/images/logo-footer.png" alt="@commonInfo.Name">
                     </a>
                 </div>
                 <div class="copy pull-left">
-                    <p>@commonInfo.Name - @commonInfo.Desc</p>
-                    <p>Địa chỉ: @commonInfo.Address</p>
-                    <p>HotLine: @Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</p>
+                    <h2>CÔNG TY CỔ PHẦN ĐẦU TƯ VÀ QUẢN LÝ BẤT ĐỘNG SẢN UDIC</h2>                                       
+                    <p>Địa chỉ 1: 29 Huỳnh Thúc Kháng - Đống Đa - Hà Nội</p>
+                    <p>Địa chỉ 2: Tầng 2, Tòa nhà Trung Yên 1, KĐT Trung Yên - Cầu Giấy - Hà Nội</p>
+                    <p>Website: www.udicland.com.vn - Tel: 0437 868 588 - Fax: 0437 868 666</p>
+                    <p>
+                        Phòng Kinh Doanh : 0914.583.599 Email : kinhdoanh1@udicland.com.vn
+                    </p>
                 </div>
                 <div class="clearfix"></div>
                 <p class="copyright text-center">
-                    Copyrights © @DateTime.Today.Year @commonInfo.Name. <a target="_blank" href="https://anpero.com">Powered by Anpero</a>
+                    Copyrights © 2020 Udic. <a target="_blank" href="https://anpero.com">Powered by Anpero</a>
                 </p>
             </div>
         </div>
