--- a/12_Shop_MultiProduct-2/Views/Home/Index.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
                 </div>
 
 
-                <div class="owl-carousel owl-carousel-4" id="">
+                <div class="owl-carousel owl-carousel-3" id="">
                     @for (var i = 0; i < bestSaleList.Item.Length; i++)
                     {
                         var item = bestSaleList.Item[i];
@@ -149,7 +149,7 @@
                             </div>
 
                         </div>
-                        <div class="owl-carousel owl-carousel-4" id="">
+                        <div class="owl-carousel owl-carousel-3">
                             @for (var i = 0; i < newestProduct.Item.Length; i++)
                             {
                                 var item = newestProduct.Item[i];
