--- a/12_Shop_MultiProduct-2/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -64,18 +64,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="pull-right hidden-xs">
-                        <a href="/product/checkout">
-                            <div class="box">
-                                <div class="box">
-                                    <div class="icon">
-                                        <i class="fa fa-youtube" aria-hidden="true"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-
-                    </div>
+                  
                     <div class="pull-right hidden-xs">
                         <a href="@commonInfo.FaceBookLink">
                             <div class="box">
@@ -88,8 +77,6 @@
                         </a>
                     </div>
                 </div>
-                
-                
                 <div class="overlayMenu"></div>
             </div>
         </div>
@@ -100,7 +87,7 @@
         <div class="container">
             <ul class="nav-navbar">
                 <li class="active  li-child">
-                    <a href="#" class="current" title="Trang chủ">
+                    <a href="/" class="current" title="Trang chủ">
                         <span>TRANG CHỦ</span>
                     </a>   
                 </li>         
