--- a/12_Shop_MultiProduct-2/Views/Home/Contact.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Home/Contact.cshtml
@@ -31,7 +31,8 @@
     <div class="container">
 
         <div>
-            @Html.Raw(commonInfo.Footer)
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.7954688485147!2d105.79935921533186!3d21.000834294106053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135aca333fa8db5%3A0x7331540bc2b4b9b9!2sAnpero.com!5e0!3m2!1svi!2s!4v1600077608435!5m2!1svi!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        
         </div>
         <div class="section section_template__contact">
             <div class="row">
