update google translate

--- a/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -51,6 +51,7 @@
                 <div class="col-md-3 hidden-sm hidden-xs header-user">
 
                     <div class="box-cart pull-right relative">
+                        <a href="javascript:doGTranslate('vi|en');" title="Dịch sang tiếng Việt" class="notranslate">English |</a><a href="javascript:doGTranslate('en|vi');" title="Dịch sang tiếng Việt" class="notranslate">Tiếng Việt </a>
                         <a href="/product/checkout">
                             <div class="box">
                                 <div class="box">
