--- a/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -51,8 +51,8 @@
                 <div class="col-md-3 hidden-sm hidden-xs header-user">
 
                     <div class="box-cart pull-right relative">
-                        <a href="javascript:doGTranslate('vi|en');" title="Dịch sang tiếng Việt" class="notranslate">English |</a><a href="javascript:doGTranslate('en|vi');" title="Dịch sang tiếng Việt" class="notranslate">Tiếng Việt </a>
-                        <a href="/product/checkout">
+                        <a href="javascript:doGTranslate('vi|en');" title="Dịch sang tiếng Việt" class="notranslate">English | </a><a href="javascript:doGTranslate('en|vi');" title="Dịch sang tiếng Việt" class="notranslate">Tiếng Việt </a>
+                        <a href="/product/checkout" style=" display: inline-block; margin-left: 10px;">
                             <div class="box">
                                 <div class="box">
                                     <div class="icon">
