--- a/17_moivietnam/Views/Home/Index.cshtml
+++ b/17_moivietnam/Views/Home/Index.cshtml
@@ -102,7 +102,7 @@
         <section class="section-md bg-100">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="heading-decoration">Featured Products</h2>
+                    <h2 class="heading-decoration">Sản phẩm nổi bật</h2>
                 </div>
                 <div class="row row-40 row-xl-55">
                     @foreach (var item in BestsaleProduct.Item)
